travis status on html & md

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<main id="content">
 			<section class="section-content-centered">
 				<h1>Sample page</h1>
+				<p>Travis status: <img src="https://travis-ci.org/asinfotrack/website-travis-deployment.svg?branch=master" alt="travis status"></p>
 			</section>
 		</main>
 		<footer>
